adding init functionality to linear layer and train example

--- a/makemore_wavenet.ipynb
+++ b/makemore_wavenet.ipynb
@@ -1,27 +1,109 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOg9/fDb0gMi5cqgVYsQEep"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: torch in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (2.7.1)\n",
+            "Requirement already satisfied: filelock in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (3.18.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (4.14.0)\n",
+            "Requirement already satisfied: setuptools in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (80.9.0)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (1.14.0)\n",
+            "Requirement already satisfied: networkx in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (3.5)\n",
+            "Requirement already satisfied: jinja2 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (3.1.6)\n",
+            "Requirement already satisfied: fsspec in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from torch) (2025.5.1)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from jinja2->torch) (3.0.2)\n",
+            "Collecting matplotlib\n",
+            "  Using cached matplotlib-3.10.3-cp313-cp313-macosx_11_0_arm64.whl.metadata (11 kB)\n",
+            "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+            "  Using cached contourpy-1.3.2-cp313-cp313-macosx_11_0_arm64.whl.metadata (5.5 kB)\n",
+            "Collecting cycler>=0.10 (from matplotlib)\n",
+            "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+            "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+            "  Using cached fonttools-4.58.4-cp313-cp313-macosx_10_13_universal2.whl.metadata (106 kB)\n",
+            "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+            "  Using cached kiwisolver-1.4.8-cp313-cp313-macosx_11_0_arm64.whl.metadata (6.2 kB)\n",
+            "Collecting numpy>=1.23 (from matplotlib)\n",
+            "  Using cached numpy-2.3.0-cp313-cp313-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+            "Requirement already satisfied: packaging>=20.0 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from matplotlib) (25.0)\n",
+            "Collecting pillow>=8 (from matplotlib)\n",
+            "  Using cached pillow-11.2.1-cp313-cp313-macosx_11_0_arm64.whl.metadata (8.9 kB)\n",
+            "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+            "  Using cached pyparsing-3.2.3-py3-none-any.whl.metadata (5.0 kB)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from matplotlib) (2.9.0.post0)\n",
+            "Requirement already satisfied: six>=1.5 in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+            "Using cached matplotlib-3.10.3-cp313-cp313-macosx_11_0_arm64.whl (8.1 MB)\n",
+            "Using cached contourpy-1.3.2-cp313-cp313-macosx_11_0_arm64.whl (255 kB)\n",
+            "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+            "Using cached fonttools-4.58.4-cp313-cp313-macosx_10_13_universal2.whl (2.7 MB)\n",
+            "Using cached kiwisolver-1.4.8-cp313-cp313-macosx_11_0_arm64.whl (65 kB)\n",
+            "Using cached numpy-2.3.0-cp313-cp313-macosx_14_0_arm64.whl (5.1 MB)\n",
+            "Using cached pillow-11.2.1-cp313-cp313-macosx_11_0_arm64.whl (3.0 MB)\n",
+            "Using cached pyparsing-3.2.3-py3-none-any.whl (111 kB)\n",
+            "Installing collected packages: pyparsing, pillow, numpy, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8/8\u001b[0m [matplotlib]8\u001b[0m [matplotlib]\n",
+            "\u001b[1A\u001b[2KSuccessfully installed contourpy-1.3.2 cycler-0.12.1 fonttools-4.58.4 kiwisolver-1.4.8 matplotlib-3.10.3 numpy-2.3.0 pillow-11.2.1 pyparsing-3.2.3\n",
+            "Requirement already satisfied: numpy in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (2.3.0)\n",
+            "Collecting kagglehub\n",
+            "  Downloading kagglehub-0.3.12-py3-none-any.whl.metadata (38 kB)\n",
+            "Requirement already satisfied: packaging in /Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages (from kagglehub) (25.0)\n",
+            "Collecting pyyaml (from kagglehub)\n",
+            "  Using cached PyYAML-6.0.2-cp313-cp313-macosx_11_0_arm64.whl.metadata (2.1 kB)\n",
+            "Collecting requests (from kagglehub)\n",
+            "  Using cached requests-2.32.4-py3-none-any.whl.metadata (4.9 kB)\n",
+            "Collecting tqdm (from kagglehub)\n",
+            "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+            "Collecting charset_normalizer<4,>=2 (from requests->kagglehub)\n",
+            "  Using cached charset_normalizer-3.4.2-cp313-cp313-macosx_10_13_universal2.whl.metadata (35 kB)\n",
+            "Collecting idna<4,>=2.5 (from requests->kagglehub)\n",
+            "  Using cached idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+            "Collecting urllib3<3,>=1.21.1 (from requests->kagglehub)\n",
+            "  Downloading urllib3-2.5.0-py3-none-any.whl.metadata (6.5 kB)\n",
+            "Collecting certifi>=2017.4.17 (from requests->kagglehub)\n",
+            "  Using cached certifi-2025.6.15-py3-none-any.whl.metadata (2.4 kB)\n",
+            "Downloading kagglehub-0.3.12-py3-none-any.whl (67 kB)\n",
+            "Using cached PyYAML-6.0.2-cp313-cp313-macosx_11_0_arm64.whl (171 kB)\n",
+            "Using cached requests-2.32.4-py3-none-any.whl (64 kB)\n",
+            "Using cached charset_normalizer-3.4.2-cp313-cp313-macosx_10_13_universal2.whl (199 kB)\n",
+            "Using cached idna-3.10-py3-none-any.whl (70 kB)\n",
+            "Downloading urllib3-2.5.0-py3-none-any.whl (129 kB)\n",
+            "Using cached certifi-2025.6.15-py3-none-any.whl (157 kB)\n",
+            "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+            "Installing collected packages: urllib3, tqdm, pyyaml, idna, charset_normalizer, certifi, requests, kagglehub\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8/8\u001b[0m [kagglehub]/8\u001b[0m [requests]\n",
+            "\u001b[1A\u001b[2KSuccessfully installed certifi-2025.6.15 charset_normalizer-3.4.2 idna-3.10 kagglehub-0.3.12 pyyaml-6.0.2 requests-2.32.4 tqdm-4.67.1 urllib3-2.5.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install torch\n",
+        "!pip install matplotlib\n",
+        "!pip install numpy\n",
+        "!pip install kagglehub"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "5ZuaZUp5oJh8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/ryanmangeno/Documents/dev/ai-env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "import torch.nn.functional as F\n",
         "import matplotlib.pyplot as plt\n",
@@ -34,81 +116,86 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "azgDdIu0lwVv"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "g44jFQs2qCGl"
+      },
+      "outputs": [],
       "source": [
         "def download_dataset() -> str:\n",
         "    path = kagglehub.dataset_download(\"rishitjakharia/names-txt\")\n",
         "    return path # for easier access later"
-      ],
-      "metadata": {
-        "id": "g44jFQs2qCGl"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset_path = download_dataset() + \"/names.txt\""
-      ],
+      "execution_count": 8,
       "metadata": {
-        "id": "MA9H16s-qPXT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "MA9H16s-qPXT",
         "outputId": "c80c0fdd-a5c0-4e6d-c8a6-10545316963a"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading from https://www.kaggle.com/api/v1/datasets/download/rishitjakharia/names-txt?dataset_version_number=1...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "100%|██████████| 113k/113k [00:00<00:00, 531kB/s]"
+            "100%|██████████| 113k/113k [00:00<00:00, 4.79MB/s]"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Extracting files...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
         }
+      ],
+      "source": [
+        "dataset_path = download_dataset() + \"/names.txt\""
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "words = open(dataset_path, 'r').read().splitlines()"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "VYqGvxdiqWwr"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "words = open(dataset_path, 'r').read().splitlines()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "K2-SWXb-qnq7"
+      },
+      "outputs": [],
       "source": [
         "def make_int_char_maps() -> tuple[dict, dict]:\n",
         "  chars = sorted(list(set(''.join(words))))\n",
@@ -116,29 +203,22 @@
         "  ctoi['.'] = 0\n",
         "  itoc = {i: c for c, i in ctoi.items()}\n",
         "  return ctoi, itoc"
-      ],
-      "metadata": {
-        "id": "K2-SWXb-qnq7"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ctoi, itoc = make_int_char_maps()"
-      ],
+      "execution_count": 12,
       "metadata": {
         "id": "RdXYrtwBq5sT"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "ctoi, itoc = make_int_char_maps()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(itoc)"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,22 +226,22 @@
         "id": "niQbCUjPrAuD",
         "outputId": "6fd5a885-ce39-4d1a-823e-c0a76e440638"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n"
           ]
         }
+      ],
+      "source": [
+        "print(itoc)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(ctoi)"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,23 +249,22 @@
         "id": "4t-Rs9ExvDw2",
         "outputId": "b51c2c4b-6ef4-437f-cc30-7311e8b1e209"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'f': 6, 'g': 7, 'h': 8, 'i': 9, 'j': 10, 'k': 11, 'l': 12, 'm': 13, 'n': 14, 'o': 15, 'p': 16, 'q': 17, 'r': 18, 's': 19, 't': 20, 'u': 21, 'v': 22, 'w': 23, 'x': 24, 'y': 25, 'z': 26, '.': 0}\n"
           ]
         }
+      ],
+      "source": [
+        "print(ctoi)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vocab_size = len(ctoi)\n",
-        "print(vocab_size)"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,25 +272,33 @@
         "id": "Bpbdik5_ne80",
         "outputId": "93432146-53fd-4ba9-b711-792cf4885f5b"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "27\n"
           ]
         }
+      ],
+      "source": [
+        "vocab_size = len(ctoi)\n",
+        "print(vocab_size)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jJqoPknQvJ2N"
+      },
+      "outputs": [],
       "source": [
         "def build_dataset(inp_words) -> tuple[torch.tensor, torch.tensor]:\n",
         "\n",
         "  block_size = 3 # context length -> how many chars does it take to predict the next\n",
         "  inp, target = [], []\n",
-        "  for w in inp_words:\n",
+        "  for w in inp_words: \n",
         "    context = [0] * block_size\n",
         "\n",
         "    for ch in w + '.':\n",
@@ -223,15 +310,15 @@
         "  inp = torch.tensor(inp)\n",
         "  target = torch.tensor(target)\n",
         "  return inp, target"
-      ],
-      "metadata": {
-        "id": "jJqoPknQvJ2N"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "wjgYr1ucOsG3"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "random.seed(42)\n",
@@ -243,19 +330,11 @@
         "Xtr, Ytr = build_dataset(words[:n1])\n",
         "Xdev, Ydev = build_dataset(words[n1:n2])\n",
         "Xte, Yte = build_dataset(words[n2:])"
-      ],
-      "metadata": {
-        "id": "wjgYr1ucOsG3"
-      },
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for x,y in zip(Xtr[:20], Ytr[:20]):\n",
-        "  print(''.join(itoc[ix.item()] for ix in x), '-->', itoc[y.item()])"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -263,11 +342,10 @@
         "id": "4YCp0YnriePg",
         "outputId": "e37210b7-1fd4-4680-d129-daacaaa929cc"
       },
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "... --> y\n",
             "..y --> u\n",
@@ -291,10 +369,19 @@
             "avi --> e\n"
           ]
         }
+      ],
+      "source": [
+        "for x,y in zip(Xtr[:20], Ytr[:20]):\n",
+        "  print(''.join(itoc[ix.item()] for ix in x), '-->', itoc[y.item()])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "9aCfwarejTWQ"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "class Linear:\n",
@@ -402,12 +489,85 @@
         "\n",
         "  def parameters(self):\n",
         "    return [p for layer in self.layers for p in layer.parameters()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x11f17b150>"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "metadata": {
-        "id": "9aCfwarejTWQ"
-      },
-      "execution_count": 13,
-      "outputs": []
+      "source": [
+        "torch.manual_seed(42) # for reproducibility"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Num Params: 8097\n"
+          ]
+        }
+      ],
+      "source": [
+        "n_emb = 10 # dimensionality of the character vectors\n",
+        "n_hidden = 200 # num hidden layer neurons\n",
+        "\n",
+        "C = torch.randn((vocab_size, n_emb))\n",
+        "layers = [\n",
+        "    Linear(n_emb, n_hidden, False), BatchNorm1d(n_hidden), Tanh(),\n",
+        "    Linear(n_hidden, vocab_size)\n",
+        "]\n",
+        "\n",
+        "# param init\n",
+        "with torch.no_grad():\n",
+        "    layers[-1].weight *= 0.1\n",
+        "\n",
+        "params = [C] + [p for layer in layers for p in layer.parameters()]\n",
+        "print(f\"Num Params: {sum(p.nelement() for p in params)}\")\n",
+        "for param in params:\n",
+        "    param.requires_grad = True"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOg9/fDb0gMi5cqgVYsQEep",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "ai-env",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
